php-backend-reactjs-frontend-eks-demo/gitops-k8s-deployment/php-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-backend
spec:
  selector:
    app: php-backend
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 80
