php-backend-reactjs-frontend-eks-demo/gitops-k8s-deployment/reactjs-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactjs-frontend
spec:
  selector:
    app: reactjs-frontend
  ports:
   -  protocol: TCP
      port: 3000
      targetPort: 3000
