php-backend-reactjs-frontend-eks-demo/gitops-k8s-deployment/php-backend-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "strict-transport-security: max-age=63072000; includeSubDomains";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "x-xss-protection: 1; mode=block";
  name: php-backend-app
spec:
  rules:
  - http:
      paths:
      - path: /php-backend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: php-backend
            port:
              number: 80
