php-backend-reactjs-frontend-eks-demo/gitops-k8s-deployment/reactjs-frontend-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "strict-transport-security: max-age=63072000; includeSubDomains";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "x-xss-protection: 1; mode=block";
  name: reactjs-frontend-app
spec:
  defaultBackend:
    service:
      name: reactjs-frontend
      port:
        number: 3000
